<resources>
    <string name="app_name">Hiii</string>
    <string name="need_a_new_account">sign up </string>
    <string name="create_account">create account</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="already_registered">login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="change_profile">Change profile</string>
    <string name="change_status">Change Status</string>
    <string name="choose_pic">choose pic</string>
</resources>
