<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cool.sarthak.hiii.RegisterActivity">
    <include layout="@layout/app_bar"
        android:id="@+id/registerpagetoolbar"
        />


    <EditText

        android:id="@+id/regname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerpagetoolbar"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regemailid"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regname"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regemailid"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button

        android:textColor="#ffffff"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/regcreateaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/regpassword"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="34dp"
        android:text="@string/create_account" />
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9606581824559784/4126039354">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
